Fix spacing and design, a6a6a3 (first of the new volume headers!)

--- a/files/style.css
+++ b/files/style.css
@@ -46,11 +46,18 @@ a[href*="mspaforums.com"], .missing {
 
 div.img {
     background-color: #c6c6c6;
-    padding: 10px;
     height: 80px;
-    width: 45%;
     margin-bottom: 10px;
     border-radius: 3px;
+}
+
+div.img:not(.new-style) {
+    padding: 10px;
+    width: 45%;
+}
+
+div.img.new-style {
+    width: 438px; /* the flexbox takes care of any concerns about things not fitting :) */
 }
 
 img {
